--- a/basic-multimedia.html
+++ b/basic-multimedia.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+<style>
+  #sound {position: relative;
+  bottom: 400px;}
+  </style>
 <body>
 
   <video src ="assets/squid.MOV" width=500 height=700 controls>
     </video>
+
+    <audio align="top" id="sound" src="assets/sugarcube purring.m4a" controls></audio>
 
   </body>
   </html>
