editing READ ME, adding Boyle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <div class="container-fluid">
 		<div class="row full-width">
-			<img src="/Users/emilyschmitt/Sites/critical-web-design/my-awesome-project/learn-html-css-milestones/assets/boyle.jpeg">
+			<img src="assets/boyle.jpeg">
 		</div>
 	</div>
 
