mkaing validation changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<title>HTML & CSS Milestones - Schmitt</title>
 </head>
 <body>
 
   <div class="container-fluid">
 		<div class="row full-width">
-			<img src="assets/boyle.jpeg">
+			<img src="assets/boyle.jpeg" alt="Charles Boyle, a charcter from the TV show Brooklyn 99, on a computer screen,
+      with the caption 'men's room, now'">
 		</div>
 	</div>
 
