and langs & titles

--- a/basic-css.html
+++ b/basic-css.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <title>HTML & CSS Milestones - Schmitt</title>
   <style>
 h1 {color: green;
   text-transformation: uppercase;}
