--- a/basic-multimedia.html
+++ b/basic-multimedia.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
 <style>
   #sound {position: relative;
   bottom: 400px;}
   </style>
+  <title>HTML & CSS Milestones - Schmitt</title>
+  </head>
 <body>
 
   <video src ="assets/squid.MOV" width=500 height=700 controls>
