--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <style>
@@ -40,6 +40,8 @@ section h3 {
 h2 {color: green;}
 section > h2 {color: red;}
     </style>
+
+    <title>HTML & CSS Milestones - Schmitt</title>
 
   </head>
 <body>
