--- a/basic-tags.html
+++ b/basic-tags.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <title>HTML & CSS Milestones - Schmitt</title>
   <style>
   table {border: 1px solid black;}
   th {border: 1px solid black;}
