--- a/basic-multimedia.html
+++ b/basic-multimedia.html
@@ -12,7 +12,7 @@
   <video src ="assets/squid.MOV" width=500 height=700 controls>
     </video>
 
-    <audio align="top" id="sound" src="assets/sugarcube purring.m4a" controls></audio>
+    <audio id="sound" src="assets/sugarcubepurring.m4a" controls></audio>
 
   </body>
   </html>
