--- a/basic-snippet.html
+++ b/basic-snippet.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <style>
 .indent {
   margin-left: 20px;
 }
 
 </style>
+<title>HTML & CSS Milestones - Schmitt</title>
+</head>
 <body>
 <p>
   Want to search the web?
@@ -59,4 +62,4 @@
   </ul>
 
 </body>
-<html>
+</html>
