--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -4,7 +4,7 @@
 <head>
   <style>
 h1 {color: green;
-  text-transformation: uppercase;}
+  transform: uppercase;}
 h3 {letter-spacing: 1 px;
   padding: 10px;
     border: dotted;
@@ -16,9 +16,9 @@ text-align: right;
 margin-bottom: 100px;
 margin-right: 150px;
 margin-left: 80px;}
-li {font-style: bold:
+li {font-style: bold;
   font-weight: bold;}
-body {background-color: lilac;}
+body {background-color: white;}
 background-image
 list-style-type
 #christmasytc {width:300px;}
