--- a/basic-tags.html
+++ b/basic-tags.html
@@ -3,11 +3,11 @@
 <head>
   <title>HTML & CSS Milestones - Schmitt</title>
   <style>
+  </head>
   table {border: 1px solid black;}
   th {border: 1px solid black;}
   td {border: 1px solid black;}
-  </style>"
-</head>
+  </style>
 <body>
 <h1>A Christmas Carol</h1>
 
