--- a/basic-css.html
+++ b/basic-css.html
@@ -5,8 +5,8 @@
   <title>HTML & CSS Milestones - Schmitt</title>
   <style>
 h1 {color: green;
-  text-transformation: uppercase;}
-h3 {letter-spacing: 1 px;
+  transform: uppercase;}
+h3 {letter-spacing: 1px;
   padding: 10px;
     border: dotted;
   border-color: red;}
@@ -17,9 +17,9 @@ text-align: right;
 margin-bottom: 100px;
 margin-right: 150px;
 margin-left: 80px;}
-li {font-style: bold:
+li {font-style: bold;
   font-weight: bold;}
-body {background-color: lilac;}
+body {background-color: white;}
 background-image
 list-style-type
 #christmasytc {width:300px;}
